# exif_rm

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/exifrm/: MainActivity.kt  MetadataViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
ios-rust/: Package.swift
ios-rust/Sources/ExifRmRust/: exif_rmFFI.modulemap
ios/ExifRm/: ContentView.swift  ExifRmApp.swift  Info.plist  MetadataViewModel.swift
ios/ExifRm.xcodeproj/: project.pbxproj
scripts/: build-android.sh  build-ios.sh  docker-build-android.sh
src/: error.rs  format.rs  lib.rs  traits.rs
src/cli/: main.rs
src/remove/: jpeg.rs  mod.rs  office.rs  pdf.rs  png.rs  video.rs
tests/: integration.rs
