[package]
name = "exif_rm"
version = "0.1.0"
edition = "2021"
description = "Remove metadata from JPEG, PNG, WebP, PDF, DOCX, XLSX, PPTX, MP4, MOV files"
license = "MIT"

[lib]
name = "exif_rm"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "exif_rm"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["jpeg", "png", "pdf", "office", "video", "webp"]
jpeg = []
png = ["dep:crc32fast"]
pdf = ["dep:lopdf"]
office = ["dep:zip", "dep:quick-xml"]
video = []
webp = []
cli = ["dep:clap"]

[dependencies]
thiserror = "2"
uniffi = { version = "0.29", features = ["cli"] }
crc32fast = { version = "1", optional = true }
lopdf = { version = "0.34", optional = true }
zip = { version = "2", optional = true }
quick-xml = { version = "0.37", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
